# mcp-ntp

./: .gitignore  LICENSE  README.md  mcp_settings.template.json  pyproject.toml  start-ntp-sse.ps1  start-ntp-sse.sh  start-ntp-stdio.ps1  start-ntp-stdio.sh  test_ntp.py
app/: __init__.py  client.py  config.py  server.py
